--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(sunburnt)
 add_subdirectory(dietaudio)
 add_subdirectory(scope)
 add_subdirectory(magiccarpet)
+add_subdirectory(modman)
