--- a/plugins/modman/CMakeLists.txt
+++ b/plugins/modman/CMakeLists.txt
@@ -53,8 +53,14 @@ target_compile_definitions("${BaseTargetName}" PUBLIC
 
 juce_add_binary_data("${BaseTargetName}BinaryData" HEADER_NAME BinaryData.h NAMESPACE BinaryData SOURCES
 	resources/base.png
-	resources/credits.png
-	resources/oversampling.png)
+	resources/banner.png
+	resources/flowers.png
+	resources/labels.png
+	resources/numbers.png
+	resources/tacks.png
+	resources/cuber.png
+	resources/onoff.png
+	resources/knob.png)
 set_target_properties("${BaseTargetName}BinaryData" PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 target_link_libraries("${BaseTargetName}" PRIVATE
