(modman) curve structure

--- a/plugins/modman/CMakeLists.txt
+++ b/plugins/modman/CMakeLists.txt
@@ -34,6 +34,7 @@ clap_juce_extensions_plugin(TARGET "${BaseTargetName}"
 target_sources("${BaseTargetName}" PRIVATE
 	source/editor.cpp
 	source/processor.cpp
+	source/curves.cpp
 	source/perlin.cpp)
 
 target_compile_definitions("${BaseTargetName}" PUBLIC
