(system) better variable definition for handling banners

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,22 @@ option(JUCE_BUILD_EXAMPLES "Build examples" OFF)
 option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Enable module source groups" ON)
 option(JUCE_COPY_PLUGIN_AFTER_BUILD "Copy plugin after build" ON)
 
-if (BANNERTYPE GREATER 0)
+if(BANNERTYPE EQUAL 2)
+	if(APPLE)
+		set(outdir "../../../setup/build_mac/paid")
+		set(freedir "../../../setup/build_mac/free")
+	else()
+		if(UNIX)
+			set(outdir "../../../setup/build_linux/paid")
+			set(freedir "../../../setup/build_linux/free")
+		else()
+			set(outdir "../../../setup/build_win/paid")
+			set(freedir "../../../setup/build_win/free")
+		endif()
+	endif()
+else()
 	add_compile_definitions(BANNER)
-	if (BANNERTYPE GREATER 1)
+	if(BANNERTYPE EQUAL 1)
 		add_compile_definitions(BETA)
 	endif()
 
@@ -45,19 +58,6 @@ if (BANNERTYPE GREATER 0)
 			set(freedir "../../../setup/build_linux/free")
 		else()
 			set(outdir "../../../setup/build_win/free")
-			set(freedir "../../../setup/build_win/free")
-		endif()
-	endif()
-else()
-	if(APPLE)
-		set(outdir "../../../setup/build_mac/paid")
-		set(freedir "../../../setup/build_mac/free")
-	else()
-		if(UNIX)
-			set(outdir "../../../setup/build_linux/paid")
-			set(freedir "../../../setup/build_linux/free")
-		else()
-			set(outdir "../../../setup/build_win/paid")
 			set(freedir "../../../setup/build_win/free")
 		endif()
 	endif()
