--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(dietaudio)
 add_subdirectory(scope)
 add_subdirectory(magiccarpet)
 add_subdirectory(modman)
+add_subdirectory(fmplus)
