--- a/plugins/fmplus/CMakeLists.txt
+++ b/plugins/fmplus/CMakeLists.txt
@@ -35,6 +35,7 @@ clap_juce_extensions_plugin(TARGET "${BaseTargetName}"
 target_sources("${BaseTargetName}" PRIVATE
 	source/editor.cpp
 	source/processor.cpp
+	source/curves.cpp
 	source/functions.cpp)
 
 target_compile_definitions("${BaseTargetName}" PUBLIC
